Fix jumping during the animation for MF

--- a/scss/layouts/board/_points.scss
+++ b/scss/layouts/board/_points.scss
@@ -12,6 +12,8 @@
 
     opacity: 1;
 
+    will-change: transform;
+
     transition: transform $generalAnimationDuration ease,
                 opacity $removeAnimationDuration ease;
 
@@ -21,7 +23,7 @@
       transition: transform $generalAnimationDuration ease,
                   visibility $removeAnimationDuration ease $generalAnimationDuration/2;
 
-      z-index: 3;
+      transform: translateZ(300px);
     }
     &-inner-container {
       position: relative;
@@ -35,9 +37,7 @@
 
       border-radius: em(10px);
 
-      transform: translateY(-50%);
-
-      z-index: 3;
+      transform: translateY(-50%) translateZ(300px);
 
       @include breakpoint-tablet {
         @include portraitOrientation() {
@@ -49,8 +49,6 @@
         content: '';
         display: block;
 
-        background-color: inherit;
-
         width: 100%;
         height: 100%;
 
@@ -58,6 +56,7 @@
 
         opacity: 1;
 
+        background-color: inherit;
         background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.04) 0%, rgba(0, 0, 0, 0.22) 100%);
         box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2),
         inset 0 0 0 3px rgba(255, 255, 255, 0.2);
@@ -91,7 +90,7 @@
 
       border: 3px solid rgba(255, 255, 255, 1);
 
-      z-index: 2;
+      transform: translateZ(200px);
 
       border-radius: em(10px);
 
